package org.example.entities;

public enum RoomType {
    SINGLE,
    DOUBLE,
    SUITE
}
