@startuml
!theme plain
skinparam linetype ortho

' ====== CONTROLLER LAYER ======
class BookingController <<Controller>> {
    - bookingService: IBookingService
    - logger: Logger
    - validator: RequestValidator
    + makeReservation(guestId: String, roomIds: List<String>, checkIn: Date, checkOut: Date): Booking
    + cancelReservation(bookingId: String): boolean
    + getBookingDetails(bookingId: String): Booking
    + getAllBookings(): List<Booking>
}

' ====== SERVICE LAYER ======
interface IBookingService <<Interface>> {
    + checkAvailability(rooms: List<Room>, checkIn: Date, checkOut: Date): boolean
    + calculateTotal(booking: Booking): double
    + applyDiscount(booking: Booking, discountCode: String): void
    + processPayment(booking: Booking, paymentMethod: String): Payment
}

class BookingService <<Service>> {
    - bookingRepository: IBookingRepository
    - roomRepository: IRoomRepository
    - discountCalculator: DiscountCalculator
    + checkAvailability(rooms: List<Room>, checkIn: Date, checkOut: Date): boolean
    + calculateTotal(booking: Booking): double
    + applyDiscount(booking: Booking, discountCode: String): void
    + processPayment(booking: Booking, paymentMethod: String): Payment
    + createBooking(guest: Guest, rooms: List<Room>, checkIn: Date, checkOut: Date): Booking
}

' ====== REPOSITORY LAYER ======
interface IBookingRepository <<Interface>> {
    + save(booking: Booking): void
    + delete(id: String): void
    + findById(id: String): Booking
    + findAll(): List<Booking>
    + findByGuestId(guestId: String): List<Booking>
}

class BookingRepository <<Repository>> {
    - database: DatabaseConnection
    - queryBuilder: QueryBuilder
    - cache: CacheManager
    + save(booking: Booking): void
    + delete(id: String): void
    + findById(id: String): Booking
    + findAll(): List<Booking>
    + findByGuestId(guestId: String): List<Booking>
}

interface IRoomRepository <<Interface>> {
    + save(room: Room): void
    + findById(id: String): Room
    + findAvailableRooms(checkIn: Date, checkOut: Date): List<Room>
}

' ====== ENTITY LAYER ======
class Hotel <<Entity>> {
    - id: String
    - name: String
    - address: String
    - phone: String
    - rating: int
    + addRoom(room: Room): void
    + removeRoom(room: Room): void
    + getRooms(): List<Room>
    + updateInfo(name: String, address: String, phone: String): void
}

class Room <<Entity>> {
    - id: String
    - roomNumber: String
    - floor: int
    - price: double
    - status: String
    + isAvailable(checkIn: Date, checkOut: Date): boolean
    + getPrice(): double
    + getRoomType(): RoomType
    + updateStatus(status: String): void
}

class RoomType <<Entity>> {
    - id: String
    - name: String
    - description: String
    - basePrice: double
    - capacity: int
    + getName(): String
    + getBasePrice(): double
    + getCapacity(): int
    + updatePrice(newPrice: double): void
}

class Guest <<Entity>> {
    - id: String
    - firstName: String
    - lastName: String
    - email: String
    - phone: String
    + updateInfo(firstName: String, lastName: String, email: String, phone: String): void
    + getBookingHistory(): List<Booking>
    + getFullName(): String
    + validateContact(): boolean
}

class Booking <<Entity>> {
    - id: String
    - checkInDate: Date
    - checkOutDate: Date
    - totalAmount: double
    - status: String
    - discountApplied: double
    + addRoom(room: Room): void
    + removeRoom(room: Room): void
    + calculateDuration(): int
    + getInvoice(): Invoice
    + updateStatus(status: String): void
}

class Invoice <<Entity>> {
    - id: String
    - invoiceNumber: String
    - issueDate: Date
    - totalAmount: double
    - taxAmount: double
    - status: String
    + generateInvoiceNumber(): String
    + calculateTax(): double
    + printInvoice(): void
    + markAsPaid(): void
}

class Payment <<Entity>> {
    - id: String
    - paymentMethod: String
    - amount: double
    - transactionId: String
    - paymentDate: Date
    - status: String
    + processTransaction(): boolean
    + refund(): boolean
    + getReceipt(): String
    + validatePayment(): boolean
}

' ====== RELATIONSHIPS ======

' Controller Layer Dependencies
BookingController ..> IBookingService : uses

' Service Layer - Realization
IBookingService <|.. BookingService : <<implements>>

' Repository Layer - Realization
IBookingRepository <|.. BookingRepository : <<implements>>

' Service Layer Dependencies
BookingService --> IBookingRepository : uses
BookingService ..> IRoomRepository : uses
BookingService ..> Booking : depends
BookingService ..> Room : depends
BookingService ..> Guest : depends
BookingService ..> Payment : creates

' Repository Dependencies
IBookingRepository ..> Booking : manages
IRoomRepository ..> Room : manages

' Entity Relationships - Composition & Aggregation & Association

' Hotel *-- Room (Composition: Room cannot exist without Hotel)
Hotel "1" *-- "0..*" Room : owns >

' Room o-- RoomType (Aggregation: RoomType can exist independently)
Room "0..*" o-- "1" RoomType : categorized by >

' Guest --> Booking (Association: Guest makes bookings)
Guest "1" --> "0..*" Booking : makes >

' Booking o-- Room (Aggregation: rooms can exist without specific booking)
Booking "0..*" o-- "1..*" Room : reserves >

' Booking --> Invoice (Aggregation: Invoice must be kept even if Booking deleted)
Booking "1" o-- "0..1" Invoice : generates >

' Booking *-- Payment (Composition: Payment has no value if booking is deleted)
Booking "1" *-- "0..*" Payment : processes >

@enduml
